--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,9 +13,9 @@
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522711.md#1" title="美印日澳联合军演 联手应对中共军事扩张""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/50552713693_1f5f47a336_o-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522124.md#1" title="新西兰政要：我们都应站出来对中共说不""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/2020-11-2-new-zealand-auckland_02-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/aovsvx368/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://aovsvx368.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525669.md#1">美众院选举 民主党正在失去一些重要席位</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】 威州说拜登领先 川普要重计票</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525522.md#1">蚂蚁中港上市突喊停 业界分析背后恐不简单</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525669.md#1">美众院选举 民主党正在失去一些重要席位</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】 威州说拜登领先 川普要重计票</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525522.md#1">蚂蚁中港上市突喊停 业界分析背后恐不简单</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524956.md#1">10月份 至少65名法轮功学员被非法判刑</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525504.md#1">成都街道强征 上百联防队员开路 村民被打</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525585.md#1">【薇羽看世间】通往白宫之路</a><br>
