--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/30/n10600549.md#1" target="_blank">文革中自杀的中共省委书记阎红彦</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9108791.md#1" target="_blank">永远的传奇—从长春到世界（上）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/aovsvx368/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245885.md#1" target="_blank">新泽西州参众议院联合决议褒奖法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
