--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/4/n9806020.md#1" target="_blank">刘晓：几置李锐于死地的“革命母亲”范元甄</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/2/26/n2443847.md#1" target="_blank">《中共弄巧成拙》(1):天安门自焚伪案</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/31/n9788740.md#1" target="_blank">高天韵：匈牙利“恐怖屋”的黑暗记录</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/1/n3859798.md#1" target="_blank">乡音：这样的菜农越多越好</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
