--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522711.md#1" title="美印日澳联合军演 联手应对中共军事扩张""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/50552713693_1f5f47a336_o-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522124.md#1" title="新西兰政要：我们都应站出来对中共说不""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/2020-11-2-new-zealand-auckland_02-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/aovsvx368/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://aovsvx368.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525723.md#1">川普律师：总统有权诉诸所有法律选项</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525669.md#1">美众院选举 民主党正在失去一些重要席位</a><br>
+:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525623.md#1">美国大选世界瞩目 专家：中国议题成重点</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522552.md#1">【名家专栏】被疫情的谎言绑架</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525723.md#1">川普律师：总统有权诉诸所有法律选项</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525669.md#1">美众院选举 民主党正在失去一些重要席位</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12518740.md#1">【大选更新】 威州说拜登领先 川普要重计票</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525522.md#1">蚂蚁中港上市突喊停 业界分析背后恐不简单</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524956.md#1">10月份 至少65名法轮功学员被非法判刑</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525504.md#1">成都街道强征 上百联防队员开路 村民被打</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12521231.md#1">【翻墙必看】55岁华为副总裁猝死</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
@@ -28,8 +28,8 @@
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12521086.md#1">中国传媒大学前副校长获刑 曾被举报性侵女生</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524572.md#1">蚂蚁被暂停上市 分析指大型集资威胁中共</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524300.md#1">美州务卿：从未在大选投票日当晚得最终数据</a><br>
-<a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522533.md#1">马云被约谈后 蚂蚁集团中港股突然暂缓上市</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524549.md#1">美国大选开票 中共控制报导 网民议论纷纷</a><br>
+<a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/3/n12522533.md#1">马云被约谈后 蚂蚁集团中港股突然暂缓上市</a><br>
 <br><p align="center"><a href="https://github.com/aovsvx368/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12520590.md#1">钟原：美大选关键时刻 中共党媒报导淡化处理</a><br>
 <a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/2/n12520639.md#1">【独家】中领馆管控公派学者更多证据曝光</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,862,194 人
+!共 366,862,338 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
