--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -333,16 +333,16 @@
 
 
 <strong>相关新闻：</strong>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525623.md#1">美国大选世界瞩目 专家：中国议题成重点</a></li>
 <li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525585.md#1">【薇羽看世间】通往白宫之路</a></li>
 <li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525350.md#1">被问川普是否胜选 中共外交部表态微妙</a></li>
 <li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525442.md#1">美国正式退出巴黎气候协议</a></li>
-<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524549.md#1">美国大选开票 中共控制报导 网民议论纷纷</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242784.md#1" target="_blank">【征文】张东园：传统文化中的善恶有报事例</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308403.md#1" target="_blank">我的父亲</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/26/n9772848.md#1" target="_blank">刘晓：救了毛一命的延安保卫处长凄惨下场</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/27/n3668851.md#1" target="_blank">吕溪珍：对大连警察的劝善信</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
