--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -333,16 +333,16 @@
 
 
 <strong>相关新闻：</strong>
+<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525623.md#1">美国大选世界瞩目 专家：中国议题成重点</a></li>
 <li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525585.md#1">【薇羽看世间】通往白宫之路</a></li>
 <li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525350.md#1">被问川普是否胜选 中共外交部表态微妙</a></li>
 <li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12525442.md#1">美国正式退出巴黎气候协议</a></li>
-<li><a href="https://github.com/aovsvx368/djy/blob/master/gb/20/11/4/n12524549.md#1">美国大选开票 中共控制报导 网民议论纷纷</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/20/n11334759.md#1" target="_blank">宋征时：迟浩田披露中共出卖大面积北方领土</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/5/5/n9108791.md#1" target="_blank">永远的传奇—从长春到世界（上）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10784939.md#1" target="_blank">共产暴政录：“抗美援朝”真相</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/24/n4647598.md#1" target="_blank">在法轮大法修炼中重生的宁德人（一）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
