--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10784939.md#1" target="_blank">共产暴政录：“抗美援朝”真相</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/24/n4647598.md#1" target="_blank">在法轮大法修炼中重生的宁德人（一）</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/30/n10007999.md#1" target="_blank">文武：反“礼教”与中共罪恶</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/22/n10994483.md#1" target="_blank">红斑狼疮病苦十年 她偶遇一纸“心灵药单”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
