--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/28/n11616929.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（三）</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/8/22/n9555520.md#1" target="_blank">为什么绝症有时可以不医而愈？</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/4/n11300386.md#1" target="_blank">林辉：大饥荒 中共却无偿送几内亚万吨大米</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/3/n9920294.md#1" target="_blank">肝癌不治自愈 澳洲华商经历的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
