--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/22/n10656949.md#1" target="_blank">胡健：少年反革命</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/2/n9799674.md#1" target="_blank">刘晓：被中共打造的“革命母亲”杨沫</a></li><li><a href="https://github.com/aovsvx368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/5/n3676026.md#1" target="_blank">老警察讲的笑话让人想哭</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
